<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/me_main_info_card"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.ysy.talkheart.views.CircularImageView
                android:id="@+id/me_avatar_img"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:src="@drawable/me_avatar_boy"
                app:civ_border="true"
                app:civ_borderColor="@android:color/transparent"
                app:civ_borderWidth="2dp" />

            <TextView
                android:id="@+id/me_nickname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/me_divider"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/me_avatar_img"
                android:layout_toRightOf="@+id/me_avatar_img"
                android:text="@string/me_nickname"
                android:textSize="26sp" />

            <View
                android:id="@+id/me_divider"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true" />


            <LinearLayout
                android:id="@+id/me_active_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/me_divider"
                android:layout_toEndOf="@+id/me_avatar_img"
                android:layout_toRightOf="@+id/me_avatar_img"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:transitionName="@string/trans_active"
                    android:id="@+id/me_active_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_active_num"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_active"
                    android:textColor="@color/divider_gray" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/me_watch_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/me_divider"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/me_active_layout"
                android:layout_toRightOf="@+id/me_active_layout"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:transitionName="@string/trans_watch"
                    android:id="@+id/me_watch_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_watch_num"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_watch"
                    android:textColor="@color/divider_gray" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/me_fans_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/me_divider"
                android:layout_marginLeft="16dp"
                android:layout_toEndOf="@+id/me_watch_layout"
                android:layout_toRightOf="@+id/me_watch_layout"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:transitionName="@string/trans_fans"
                    android:id="@+id/me_fans_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_fans_num"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_fans"
                    android:textColor="@color/divider_gray" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/me_introduction_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/me_main_info_card"
        android:layout_marginTop="1dp">

        <TextView
            android:id="@+id/me_introduction_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="4dp"
            android:text="@string/me_introduction" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/me_others_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/me_introduction_card"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/me_mark_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:transitionName="@string/trans_mark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/me_mark"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/me_draft_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:transitionName="@string/trans_draft">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/me_draft"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/me_last_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/me_clear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/me_clear"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray" />

            <LinearLayout
                android:id="@+id/me_exit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="@string/me_exit"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>