<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.ysy.talkheart.activities.LoginActivity">

    <ImageView
        android:id="@+id/login_logo_img"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_above="@+id/login_input_layout"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:src="@drawable/login_press"
        android:transitionName="@string/trans_logo" />

    <LinearLayout
        android:id="@+id/login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_user_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_user"
            android:inputType="text" />

        <EditText
            android:id="@+id/login_pw_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/login_pw"
            android:inputType="textPassword" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_register_tip_layout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:transitionName="@string/trans_register">

        <TextView
            android:id="@+id/login_register_tip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:hint="@string/login_register_tip" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_alignBottom="@+id/login_register_tip_tv"
            android:layout_alignEnd="@+id/login_register_tip_tv"
            android:layout_alignLeft="@+id/login_register_tip_tv"
            android:layout_alignRight="@+id/login_register_tip_tv"
            android:layout_alignStart="@+id/login_register_tip_tv"
            android:background="@color/colorAccent" />

    </RelativeLayout>

</RelativeLayout>
