<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.ysy.talkheart.activities.WelcomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:transitionName="@string/trans_logo"
            android:id="@+id/welcome_logo_img"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/talk_heart_logo" />

        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_name"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <TextView
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/welcome_little_name"
            android:layout_marginBottom="64dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>
